# intellidoc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ml_workflow.yml
data/interim/: preprocessed_data.csv  processed_data.csv
data/processed/: label_mapping.csv  maintain_data.csv
intellidoc/: inference.py
intellidoc/classification_models/: advance_llm.py  roberta.py
intellidoc/data_processing/: data_loader.py  data_preprocessing.py  data_processing.py  dataset.py
intellidoc/evaluation/: advance_llm_evaluation.py  roberta_evaluation.py
intellidoc/training/: llm_trainer.py  roberta_trainer.py
intellidoc/utilities/: save_load_model.py
tests/: data_loader_test.py  data_preprocessing_test.py  dataset_test.py  test_llm_trainer.py  test_roberta.py  test_roberta_trainer.py
tests/temp_data/: input.csv  maintain.csv  train.csv  val.csv
